# amfitrack_cpp_SDK

./: .gitignore  Amfitrack.cpp  Amfitrack.hpp  AmfitrackDevices.cpp  AmfitrackDevices.hpp  CMakeLists.txt  CMakePresets.json  README.md
lib/amfiprotapi/: lib_AmfiProt.cpp  lib_AmfiProt.hpp  lib_AmfiProt_API.cpp  lib_AmfiProt_API.hpp  lib_AmfiProt_Amfitrack.cpp  lib_AmfiProt_Amfitrack.hpp
lib/hidapi/: LICENSE.txt  hidapi.lib
lib/lib_crc/: lib_CRC.c  lib_CRC.h
lib/lib_generic_parameter/: lib_Generic_Parameter.c  lib_Generic_Parameter.h
lib/lib_macro/: lib_MACRO.h
lib/lib_queue/: lib_Queue.c  lib_Queue.h
output/: Amfitrack_API.lib
output/MSVC/x64/: Amfitrack_API.lib
output/MSVC/x86/: Amfitrack_API.lib
src/: AmfitrackNode.cpp  AmfitrackNode.h  project_conf.h  usb_connection.cpp  usb_connection.h
